syntax = "proto3";
option go_package = "./proto";

service Blockchain {
  rpc ExecuteTrunsaction (TransactionRequest) returns (TransactionReply) {}
}

message TransactionRequest {
    string from = 1;
    string to = 2;
    int32 amount = 3;
}

message TransactionReply {
    string message = 1;
}
